--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Manuel Reina Aguilar
 
 # Short bio or description (displayed in the header)
-description: Web Developer (.NET, Orchard CMS, Angular, NativeScript)
+description: Web Developer (.NET, Orchard CMS, Angular, NativeScript, TypeScript)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/15227137?v=3&s=96
