--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Manuel Reina
+name: Manuel Reina Aguilar
 
 # Short bio or description (displayed in the header)
 description: Web Developer (.NET, Orchard CMS, Angular, NativeScript, TypeScript)
